--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+a {
+  text-decoration: none;
+  color: #12125b;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,113 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+} 
+
+button {
+  border-radius: round;
+  color: black;
+}
+
+.card, 
+.card p {
+  margin: 10px;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+h3, h4, h5, h6 {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+main {
+  width: 90%;
+  margin: auto;
+}
+label {
+  font-weight: bold;
+}
+
+nav {
+  background-image: linear-gradient(270deg, #0d0d42, yellow);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  box-shadow: 2px 2px 10px rgb(184, 182, 182);
+  margin-bottom: 1em;
+}
+
+table {
+
+  /* border: 2px solid #000000; */
+  /* border-radius: 205px; */
+  height: 150px;
+  width: 40%;
+  margin: auto;
+}
+
+td {
+  text-align: center;
+}
+
+tbody td:not(td:first-of-type):hover {
+  transform: scale(1.05);
+  opacity: 0.9;
+}
+
+tbody tr:nth-child(even) {
+  background: #f7f8f8;
+}
+tbody tr:nth-child(odd) {
+  background: #bbdbd7;
+  color: rgb(0, 0, 0);
+}
+
+.New form {
+  background-image: linear-gradient(#9dc8d0, rgb(83, 142, 157));
+  /* background: rgb(49, 57, 94); */
+  box-shadow: 2px 2px 10px rgb(153, 153, 153);
+  color: white;
+  margin: auto;
+  padding: 30px;
+  width: 35%;
+}
+form input {
+  margin: 30px;
+}
+
+input[type],
+textarea {
+  background: #ececf1;
+  color: rgb(0, 0, 0);
+  display: block;
+  width: 50%;
+  margin: auto;
+}
+
+input[type="checkbox"] {
+  margin: 0;
+  width: 2%;
+}
+
+
+input[type="submit"] {
+  width: 30%;
+}
+
+.showNavigation {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+}
+#mistakesWereMadeToday {
+  display: inline;
+  margin: 30px;
 }
